# super-wikipedia-speedrun

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  diverse_benchmark.py  netlify.toml  package.json  pyproject.toml  replay_benchmark.py  requirements.txt  web_app.py  wiki_speedrun.py
.github/workflows/: ci.yml
benchmarks/: __init__.py  diverse_benchmark.py  replay_benchmark.py
benchmarks/data/: frozen_30_races.csv  frozen_30_races.json
benchmarks/results/: no_cache_replay_results.csv  no_cache_replay_results.json
docs/: ARCHITECTURE.md  BENCHMARKS.md
netlify/functions/: solve.mjs
src/wikispeedrun/: __init__.py  solver.py
tests/: static_check.py
web/: app.js  index.html  styles.css
